--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title></title>
     </head>
     <body>
+        <div id="prezzo"></div>
         <script src="js/script.js" charset="utf-8"></script>
     </body>
 </html>
